<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE6E6"
    tools:context=".Recipe.Home.AboutFragment">

    <!-- About the App Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/aboutAppCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="130dp"
                android:layout_height="152dp"
                android:src="@drawable/app_logo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingLeft="16dp">

                <TextView
                    android:id="@+id/aboutAppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_the_app"
                    android:textColor="@color/orange"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aboutApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/our_recipe_app_allows_you_to_discover_save_and_organize_a_variety_of_recipes_effortlessly_enhance_your_cooking_experience_with_easy_to_follow_instructions_and_personalized_recipe_collections"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- About Us Section Title -->
    <TextView
        android:id="@+id/AboutUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_us"
        android:textColor="@color/orange"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutAppCard" />

    <!-- Youssef Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/youssefCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AboutUsTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/youssefAboutID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youssef_mostafa_abdelaty"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/youssefEmailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youssef2_mostafa_1_gmail_com"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Mohammed Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/mohammedCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youssefCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/mohammedAboutID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mohammed_essam_el_din"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/mohammedEmailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msam01619_gmail_com"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Omar Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/omarCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mohammedCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/OmarAboutID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/omar_adel_badawy"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/omarEmailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/omarwahsh555_gmail_com"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Shahd Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/shahdCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/omarCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/ShahdAboutID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shahd_osama_hamed"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/shahdEmailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shahdosama734_gmail_com"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Asmaa Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/asmaaCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shahdCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/AsmaaAboutID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asmaa_saleh_farghaly"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/AsmaaEmailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asmaa111saleh111_gmail_com"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
